Issue #3251939 by jrockowitz, brianbrarian: Text in help tooltip for custom composite sub-element doesn't wrap

--- a/css/webform.element.multiple.css
+++ b/css/webform.element.multiple.css
@@ -20,6 +20,11 @@
   white-space: nowrap;
 }
 
+.webform-multiple-table td .webform-element-help--title,
+.webform-multiple-table td .webform-element-help--content {
+  white-space: normal;
+}
+
 .webform-multiple-table td .description,
 .webform-multiple-table td .messages,
 .webform-multiple-table td .form-item--error-message {
